[gd_scene load_steps=6 format=2]

[ext_resource path="res://particleMaterials/arcaneBoltMat.tres" type="Material" id=1]
[ext_resource path="res://scripts/playerScripts/Player_projectiles.gd" type="Script" id=2]
[ext_resource path="res://scenes/utilityScenes/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 5.09902

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="Area2D" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 80
process_material = ExtResource( 1 )

[node name="Delete_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_entered"]
[connection signal="timeout" from="Delete_timer" to="." method="_on_Delete_timer_timeout"]

[editable path="Hitbox"]
